--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,33 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#D8D4D5"
     android:padding="10dp"
-    tools:context=".LoginActivity" >
+    tools:context=".LoginActivity">
 
     <EditText
         android:id="@+id/username1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Username"
         android:layout_marginTop="50dp"
-        />
+        android:hint="Username" />
 
     <EditText
         android:id="@+id/password1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:layout_below="@+id/username1"
         android:layout_marginTop="50dp"
-        android:layout_below = "@+id/username1"
-        />
+        android:hint="Password" />
 
     <Button
         android:id="@+id/btnsignin1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign In"
+        android:layout_below="@+id/password1"
         android:layout_marginTop="50dp"
-        android:layout_below="@+id/password1"/>
+        android:text="Sign In" />
 
 
 </RelativeLayout>
