Images and image name in DB can now be displayed to SavedImages

--- a/app/src/main/res/layout/activity_saved_images.xml
+++ b/app/src/main/res/layout/activity_saved_images.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".savedImages">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/home_btn"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="284dp"
+        android:layout_marginEnd="7dp"
+        android:text="Home" />
+
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="408dp"
+        android:layout_height="679dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:columnWidth="120dp"
+        android:gravity="center"
+        android:numColumns="2">
+
+    </GridView>
+
+</RelativeLayout>
