--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -70,25 +70,25 @@
         app:layout_constraintTop_toBottomOf="@+id/profile_layout" />
 
     <Button
-        android:id="@+id/saved_texts_btn"
+        android:id="@+id/text_speech_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Saved Texts"
+        android:text="Text to Speech"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/saved_images_btn" />
 
     <Button
-        android:id="@+id/saved_speeched_btn"
+        android:id="@+id/speech_text_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Saved Speeches"
+        android:text="Speech To Text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saved_texts_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/text_speech_btn" />
 
     <Button
         android:id="@+id/camera_btn"
