Saved Texts Display is working

--- a/app/src/main/res/layout/activity_speechtotext.xml
+++ b/app/src/main/res/layout/activity_speechtotext.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/saved_texts"
+        android:id="@+id/saved_texts_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Saved Texts" />
