--- a/app/src/main/res/layout/activity_saved_texts.xml
+++ b/app/src/main/res/layout/activity_saved_texts.xml
@@ -7,6 +7,18 @@
     tools:context=".savedTexts">
 
     <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="50sp" />
+
+    <Button
+        android:id="@+id/home_btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="313dp"
+        android:layout_marginEnd="5dp"
+        android:text="Home" />
 </RelativeLayout>
