--- a/app/src/main/res/layout/activity_image_capture.xml
+++ b/app/src/main/res/layout/activity_image_capture.xml
@@ -48,24 +48,23 @@
         android:id="@+id/lastcapture"
         android:layout_width="195dp"
         android:layout_height="157dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="28dp"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_display"
         app:srcCompat="@drawable/untitled_design__1_" />
 
     <Button
         android:id="@+id/next_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="312dp"
         android:enabled="false"
         android:text="Next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/launch_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/lastcapture" />
 
     <Button
         android:id="@+id/detect_btn"
