--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,14 +33,14 @@
 
     <Button
         android:id="@+id/register_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
+        android:layout_width="121dp"
+        android:layout_height="42dp"
         android:layout_below="@+id/btnsignin1"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="67dp"
-        android:layout_marginEnd="151dp"
-        android:layout_marginBottom="320dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="138dp"
         android:text="Register" />
 
 
